--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -7,86 +7,64 @@
     android:background="@drawable/background"
     tools:context=".TelaPrincipal">
 
-    <View
+    <ImageView
         android:id="@+id/container_user"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_margin="30dp"
-        android:background="@drawable/container_user"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="50dp"
+        android:background="@drawable/carrinho"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_user"
-        app:layout_constraintStart_toStartOf="@+id/container_user"
-        app:layout_constraintEnd_toEndOf="@id/container_user"
-        app:layout_constraintTop_toTopOf="@id/container_user"
-        app:layout_constraintBottom_toBottomOf="@id/container_user"
-        />
-
-    <ImageView
-        android:id="@+id/iconeUser"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_user"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/container_user"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textNomeUsuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anderson W Ramos Gomes"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@id/container_user"
-        app:layout_constraintStart_toEndOf="@id/iconeUser"
-        />
-
-    <ImageView
-        android:id="@+id/iconeEmail"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_email"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/iconeUser"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_margin="50dp"
+        android:background="@drawable/caderno"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
-        android:id="@+id/textEmailUsuario"
+        android:id="@+id/text_anotações"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Eniac1234@gmail.com"
-        android:textColor="@color/black"
-        android:textSize="20sp"
+        android:text="Anotações"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@id/textNomeUsuario"
-        app:layout_constraintStart_toEndOf="@id/iconeEmail"
-        />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="262dp" />
 
-    <Button
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_mercado"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deslogar"
-        android:backgroundTint="@color/black"
-        android:textSize="18sp"
-        android:padding="20dp"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/textEmailUsuario"
+        android:text="Mercado"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="252dp"
+        tools:layout_editor_absoluteY="262dp" />
+
+    <TextView
+        android:id="@+id/text_tit"
+        android:layout_width="288dp"
+        android:layout_height="40dp"
+        android:text="É MUITO FÁCIL DE USAR "
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="80dp" />
 
 
-        />
 </androidx.constraintlayout.widget.ConstraintLayout>
