--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -1,70 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".TelaPrincipal">
-
-    <ImageView
-        android:id="@+id/container_user"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="50dp"
-        android:background="@drawable/carrinho"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="50dp"
-        android:background="@drawable/caderno"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+    android:layout_margin="80px">
 
     <TextView
-        android:id="@+id/text_anotações"
-        android:layout_width="wrap_content"
+        android:id="@+id/menu"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Anotações"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="89dp"
-        tools:layout_editor_absoluteY="262dp" />
+        android:text="Menu"
+        android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/text_mercado"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btcheck"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Mercado"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="252dp"
-        tools:layout_editor_absoluteY="262dp" />
+        android:text="CheckList" />
 
-    <TextView
-        android:id="@+id/text_tit"
-        android:layout_width="288dp"
-        android:layout_height="40dp"
-        android:text="É MUITO FÁCIL DE USAR "
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="80dp" />
+    <Button
+        android:id="@+id/btlista"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Lista de Compra" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
