--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -12,8 +12,9 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/logobranco"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
