atualização do dia 23/03/23

--- a/app/src/main/res/layout/activity_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_form_cadastro.xml
@@ -63,6 +63,7 @@
        />
 
    <androidx.appcompat.widget.AppCompatButton
+       android:id="@+id/bt_cadastar"
        style="@style/Button"
        android:text="Cadastrar"
        android:layout_marginTop="30dp"
